# decoder-benchmarks-for-rust

./: Cargo.toml  README.md  summarize_results.py
benches/: benchmarks.rs  jpeg_benchmark.rs  my_benchmark.rs  png_benchmark.rs
src/: jpeg.rs  lib.rs  main.rs  png.rs
