[package]
name = "image_decoder_benchmarks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
jpeg-decoder = { version = "0.1", default-features = false }
turbojpeg = { version = "0.2", features = ["image"] }

[dev-dependencies]
# criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "jpeg_benchmark"
harness = false
