[package]
name = "decoder_benchmarks_for_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
# Rayon disabled:
# jpeg-decoder = { version = "0.1", default-features = false }
# Rayon on:
jpeg-decoder = { version = "0.2.1" }
turbojpeg = { version = "0.2.1", features = ["image"] }

spng = "0.1.0"
png = "0.17.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
